// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / CardWithTitle CardWithTitle as article (most CardWithTitle should be article) 1`] = `
.c1 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c5 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c5 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media not all and (min-width:760px) {
  .c2 {
    display: none !important;
  }
}

@media not all and (max-width:759px) {
  .c4 {
    display: none !important;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<article
  className="c0"
>
  <header
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Konton
      </span>
    </div>
    <div
      className="c4"
    >
      <span
        className="c3"
      >
        Konton
      </span>
    </div>
  </header>
  <div
    className="c5"
  >
    A CardWithTitle as a article containing content
  </div>
</article>
`;

exports[`Storyshots Molecules / CardWithTitle CardWithTitle as section 1`] = `
.c1 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c5 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

@media (min-width:760px) {
  .c1 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c5 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media not all and (min-width:760px) {
  .c2 {
    display: none !important;
  }
}

@media not all and (max-width:759px) {
  .c4 {
    display: none !important;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<section
  className="c0"
>
  <header
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Konton
      </span>
    </div>
    <div
      className="c4"
    >
      <span
        className="c3"
      >
        Konton
      </span>
    </div>
  </header>
  <div
    className="c5"
  >
    A CardWithTitle as a section containing content
  </div>
</section>
`;

exports[`Storyshots Molecules / CardWithTitle Cards without padding 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 0px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c6 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 0px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 0px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c6 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media not all and (min-width:760px) {
  .c3 {
    display: none !important;
  }
}

@media not all and (max-width:759px) {
  .c5 {
    display: none !important;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        This card has neither top nor bottom padding
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c4"
      >
        This card has neither top nor bottom padding
      </span>
    </div>
  </header>
  <div
    className="c6"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat turpis erat, sit amet tincidunt purus tempus sit amet. Nullam porttitor lorem a nibh efficitur condimentum. Etiam ac dolor eget felis hendrerit pellentesque. Cras efficitur libero quis mattis condimentum. Vestibulum rhoncus nibh et euismod consequat. Etiam semper leo nisl, id aliquet libero consectetur in. Nunc vulputate nec mi eu iaculis. Quisque vel pellentesque odio. Donec tempus turpis nec vehicula tempor. Nulla facilisi. Suspendisse magna ex, vulputate quis risus non, eleifend tincidunt dui. Nam blandit vitae velit non consequat.
  </div>
</div>
`;

exports[`Storyshots Molecules / CardWithTitle Default 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c6 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c6 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media not all and (min-width:760px) {
  .c3 {
    display: none !important;
  }
}

@media not all and (max-width:759px) {
  .c5 {
    display: none !important;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Konton
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c4"
      >
        Konton
      </span>
    </div>
  </header>
  <div
    className="c6"
  >
    A CardWithTitle containing content
  </div>
</div>
`;

exports[`Storyshots Molecules / CardWithTitle Integration: CardWithTitle with custom component as title 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c9 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c10 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  display: inline-block;
  max-width: 400px;
}

.c8 {
  padding-left: 4px;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c9 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <h2
          className="c5"
        >
          Konton
        </h2>
      </div>
      <div
        className="c4"
      >
        <span
          className="c6"
        >
          Marknadsöversikt (not really a link)
        </span>
        <svg
          aria-hidden="true"
          className="c7 c8"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
          />
        </svg>
      </div>
    </div>
  </header>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <span
        className="c11"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac lectus aliquam, scelerisque est eget, lobortis massa. Praesent in pretium orci. Phasellus est sapien, maximus at nulla ac, condimentum dictum ante. Sed consequat erat lacinia, molestie augue vitae, efficitur purus. In venenatis elit nec tortor condimentum, sit amet elementum magna fermentum. Phasellus dictum non augue vitae pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent rutrum egestas sollicitudin. Cras semper, mi vitae vulputate aliquam, tortor ante maximus libero, vitae maximus velit dui quis augue. Aenean condimentum molestie ante, nec rhoncus nunc aliquet non. Aliquam bibendum tortor dui, eget porttitor nibh fermentum eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec magna lectus. Fusce posuere nisi vel purus faucibus sodales. Quisque ac ullamcorper eros, sed lobortis risus. Sed eu magna mi. Vestibulum accumsan porta velit. Donec ligula arcu, cursus eu nisl vel, molestie pretium neque. Etiam urna elit, mollis vel arcu id, vulputate mattis nisi. Fusce eget odio id ipsum consectetur feugiat vitae ut tortor. Aliquam non tempor nibh, scelerisque placerat eros. Nulla facilisi.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / CardWithTitle Integration: with FadedScroll 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c9 {
  padding-left: 20px;
  padding-right: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c11 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c8 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c10 {
  display: inline-block;
  max-width: 400px;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:976px) {
  .c5 {
    position: relative;
  }

  .c5::before {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    top: 0;
    background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
  }
}

@media (min-width:976px) {
  .c5 {
    position: relative;
  }

  .c5::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    bottom: 0;
    background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  }
}

@media (min-width:976px) {
  .c6 {
    max-height: 200px;
    overflow-y: auto;
    width: 100%;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Konton
    </h2>
  </header>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          />
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac lectus aliquam, scelerisque est eget, lobortis massa. Praesent in pretium orci. Phasellus est sapien, maximus at nulla ac, condimentum dictum ante. Sed consequat erat lacinia, molestie augue vitae, efficitur purus. In venenatis elit nec tortor condimentum, sit amet elementum magna fermentum. Phasellus dictum non augue vitae pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent rutrum egestas sollicitudin. Cras semper, mi vitae vulputate aliquam, tortor ante maximus libero, vitae maximus velit dui quis augue. Aenean condimentum molestie ante, nec rhoncus nunc aliquet non. Aliquam bibendum tortor dui, eget porttitor nibh fermentum eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec magna lectus. Fusce posuere nisi vel purus faucibus sodales. Quisque ac ullamcorper eros, sed lobortis risus. Sed eu magna mi. Vestibulum accumsan porta velit. Donec ligula arcu, cursus eu nisl vel, molestie pretium neque. Etiam urna elit, mollis vel arcu id, vulputate mattis nisi. Fusce eget odio id ipsum consectetur feugiat vitae ut tortor. Aliquam non tempor nibh, scelerisque placerat eros. Nulla facilisi.
            </span>
          </div>
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / CardWithTitle Integration: with FadedScroll of content and height being whatever is available left of parents height. 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c5 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c10 {
  padding-left: 20px;
  padding-right: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
}

.c8 {
  position: relative;
  overflow-x: hidden;
}

.c12 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c9 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  display: inline-block;
  max-width: 400px;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c5 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:976px) {
  .c6 {
    position: relative;
  }

  .c6::before {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    top: 0;
    background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
  }
}

@media (min-width:976px) {
  .c6 {
    position: relative;
  }

  .c6::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    bottom: 0;
    background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  }
}

@media (min-width:976px) {
  .c7 {
    min-height: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    -webkit-flex-basis: auto;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    overflow-y: auto;
    width: 100%;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:976px) {
  .c2 {
    height: 250px;
  }
}

<div
  className="c0 c1 c2"
>
  <header
    className="c3"
  >
    <h2
      className="c4"
    >
      Konton
    </h2>
  </header>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          />
          <div
            className="c10"
          >
            <span
              className="c11"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac lectus aliquam, scelerisque est eget, lobortis massa. Praesent in pretium orci. Phasellus est sapien, maximus at nulla ac, condimentum dictum ante. Sed consequat erat lacinia, molestie augue vitae, efficitur purus. In venenatis elit nec tortor condimentum, sit amet elementum magna fermentum. Phasellus dictum non augue vitae pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent rutrum egestas sollicitudin. Cras semper, mi vitae vulputate aliquam, tortor ante maximus libero, vitae maximus velit dui quis augue. Aenean condimentum molestie ante, nec rhoncus nunc aliquet non. Aliquam bibendum tortor dui, eget porttitor nibh fermentum eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec magna lectus. Fusce posuere nisi vel purus faucibus sodales. Quisque ac ullamcorper eros, sed lobortis risus. Sed eu magna mi. Vestibulum accumsan porta velit. Donec ligula arcu, cursus eu nisl vel, molestie pretium neque. Etiam urna elit, mollis vel arcu id, vulputate mattis nisi. Fusce eget odio id ipsum consectetur feugiat vitae ut tortor. Aliquam non tempor nibh, scelerisque placerat eros. Nulla facilisi.
            </span>
          </div>
          <div
            className="c12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / CardWithTitle With Component As Title 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 46px;
  line-height: 1.0434782608695652;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 48px;
    line-height: 1.0833333333333333;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <span
      className="c3"
    >
      Hero Title
    </span>
  </header>
  <div
    className="c4"
  >
    A CardWithTitle containing content
  </div>
</div>
`;

exports[`Storyshots Molecules / CardWithTitle With variant big 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c7 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 40px;
    padding-top: 40px;
    padding-right: 40px;
    padding-bottom: 12px;
  }
}

@media (min-width:760px) {
  .c7 {
    padding-left: 40px;
    padding-right: 40px;
    padding-bottom: 40px;
  }
}

@media not all and (min-width:760px) {
  .c3 {
    display: none !important;
  }
}

@media not all and (max-width:759px) {
  .c5 {
    display: none !important;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c6 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Title for the card
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c6"
      >
        Title for the card
      </span>
    </div>
  </header>
  <div
    className="c7"
  >
    A CardWithTitle with extra padding
  </div>
</div>
`;
